# thenewslane

./: .claudeignore  .env  .env.example  .gitignore  .vercelignore  COMPLIANCE_CHECKLIST.md  README.md  package-lock.json  package.json  vercel.json
apps/agent/: COMPLETE_REPLICATE_FIX_GUIDE.md  add_color_column_sql.sql  backfill_recent_null_content.py  backfill_thumbnails.py  brand_safety_improvement_summary.py  check_brand_safety_examples.py  check_categories_schema.py  check_database_schema.py  check_published_content.py  check_recent_content.py  cleanup_empty_published_topics.py  debug_api_key.py  debug_content_generation.py  debug_generation_errors.py  debug_thumbnail_generation.py  dedup_report_20260226_122331.json  dedup_report_20260226_122851.json  diagnose_content_issue.py  explain_brand_safety.py  fix_category_colors.py  fix_database_content.py  fix_duplicate_slug_issue.py  fix_replicate_option1_downgrade_python.md  fix_replicate_option2_pin_versions.md  fix_replicate_option3_alternatives.py  fix_replicate_option3_settings.py  fix_replicate_option4_direct_http.py  fix_web_app_query.py  graph.py  implement_openai_fix.py  main.py  nohup.out  pyproject.toml  rehash_report_20260226_123705.json  rehash_report_20260226_170137.json  requirements.txt  scheduler.py  setup.sh  test_all_fixes.py  test_anthropic_api.py  (+11 more)
apps/agent/config/: __init__.py  settings.py
apps/agent/data/: author_personas.json
apps/agent/docs/: brand_safety_and_classification.md  content_generation_node.md  fact_check_pipeline.md  media_and_publish_pipeline.md
apps/agent/models/: __init__.py  feature_engineer.py  linear_scorer.py  llm_validator.py  viral_model.py
apps/agent/nodes/: __init__.py  __init__test.py  brand_safety.py  brand_safety_filters.py  classification_node.py  collection_node.py  content_generation_node.py  content_generator.py  fact_check_node.py  generate_video_node.py  media_generation_node.py  publish_node.py  publisher.py  signal_collector.py  video_sourcing_node.py  viral_prediction_node.py  viral_predictor.py
apps/agent/scripts/: __init__.py  backfill_author_personas.py  deduplicate.py  rehash_published.py  update_all_authors_to_aadi.py
apps/agent/tests/: __init__.py  test_brand_safety_node.py  (+9 more)
docs/: schema.sql  (+13 more)
(+244 files in other folders)
